--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     const video = document.getElementById('funVideo');
 
     video.onended = () => {
-      window.location.href = "https://www.google.com";
+      window.location.href = "https://docs.google.com/document/d/1WPSEW99NKgZr2J08SdERG5PjhiUNTsRcd_-bf2qczfk/edit?usp=sharing";
     };
   </script>
 
